# android-face-detection

./: LICENSE  README.md  build.gradle  settings.gradle
app/: bintray.gradle  build.gradle  install.gradle
app/src/androidTest/java/ai/seventhsense/facedetection/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  facedetector.cpp  facedetector.h  handle.h  seventh-sense-ai-facedetection.cpp
app/src/main/cpp/includes/: facedetectcnn.h  facedetection_export.h
app/src/main/java/ai/seventhsense/facedetection/: Detection.java  LFDDetector.java
app/src/test/java/ai/seventhsense/facedetection/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
